# kirby

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  Snakefile  build-roms.sh  kirby.example.env  pyproject.toml  snakeconf.yml  test1-step2.gbc_SPOILER.txt
kirby/: Snakefile  __init__.py  __main__.py  cli.py  discord_bot.py  snakeconf.yml
kirby/ext/: item_rando.py
kirby/tests/: test-workflow.py
kirby/util/: item_rando_caller.py  traceback_limit.py
kirby/web/server/: __init__.py  app.py
kirby/web/server/templates/: generate_route_error.html  rando_landing.html
tests/: test-workflow.py
