[build-system]
requires = ["setuptools>=61.0", "discord.py>=2.2.0", "python-dotenv>=1.0.0", "snakemake>=7.26.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kirby"
version = "0.0.1"
authors = [
    { name="PikalaxALT", email="pikalaxalt@gmail.com" }
]
description="A Discord bot to generate item-randomized ROMs of Pokemon Crystal"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PikalaxALT/kirby.git"
"Bug Tracker" = "https://github.com/PikalaxALT/kirby/issues"

[tool.setuptools.package-data]
kirby = ["Snakefile", "snakeconf.yml"]
